<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Registration App</string>
    <string name="message">Welcome to Adventure Learning Club!</string>
    <string name="name">Full Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="student">Student ID</string>
    <string name="school">School</string>
    <string name="mail">E-Mail</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
</resources>